google OAuth login

--- a/src/main/resources/templates/loginForm.html
+++ b/src/main/resources/templates/loginForm.html
@@ -10,8 +10,9 @@
     <form action="/login" method="post">
        id: <input type="text" name="username" placeholder="id를 입력하세요."><br/>
        password: <input type="password" name="password" placeholder="pw를 입력하세요."><br/>
-        <button type="submit">login</button>
+        <button typ="submit">login</button>
     </form>
+    <a href="/oauth2/authorization/google">구글아이디로 로그인하기</a>
     <a href="/joinForm">회원가입</a>
 </body>
 </html>
