--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -5,7 +5,7 @@
     <title>Home</title>
 </head>
 <body>
-    <h1>Home 화면입니다.</h1>
+    <h1>시작 페이지 입니다.</h1>
     <a href="loginForm">로그인하기</a>/
     <a href="joinForm">회원가입하기</a>
 </body>
