--- a/src/main/resources/templates/joinForm.html
+++ b/src/main/resources/templates/joinForm.html
@@ -12,6 +12,10 @@
        이름: <input type="text" name="userName" placeholder="이름을 입력하세요."><br/>
        이메일: <input type="email" name="userEmail" placeholder="email 입력하세요."><br/>
        비밀번호: <input type="password" name="userPassword" placeholder="pw를 입력하세요."><br/>
+       권한: <select name="userRole">
+                <option value="ROLE_USER">사용자</option>
+                <option value="ROLE_ADMIN">관리자</option>
+            </select>
         <button type="submit">join</button>
     </form>
 </body>
